--- a/editor/editor.css
+++ b/editor/editor.css
@@ -13,7 +13,7 @@ body {
 	max-width: 100%;
 	width: 100%;
 	height: 100%;
-	
+	margin: 0;
 	/* width: 700px !important; */
 	/* min-width: 700px !important; */
 	/* height: 400px !important; */
@@ -26,6 +26,7 @@ body {
 	max-width: 100%;
 	width: 100%;
 	height: 100%;
+	
 
 	/* width: 700px !important; */
 	/* min-width: 700px !important; */
