--- a/popup/popup.css
+++ b/popup/popup.css
@@ -2,16 +2,16 @@ html, body {
 	width: 350px;
 	/* position: absolute; */
 	/* top: 4px; */
-    width: 100%;
-	height: 100%;
+	width: 350px;
+	height: 350px;
 	overflow: visible !important;
 	overflow-x: visible !important;
 }
 
-/* #content { */
-/* 	width: 350px; */
-/* 	height: 350px; */
-/* } */
+#content {
+	width: 100%;
+	height: 100%;
+}
 
 .panel {
   margin: 5px;
