--- a/editor/editor.css
+++ b/editor/editor.css
@@ -1,12 +1,14 @@
 body {
 
 	overflow: hidden;
-
+	min-height: 100%;
+	max-height: 100%;
+	/* width: 100%; */
+	height: 100%;
 }
 
 #code_area {
-
-	position: fixed;
+	
 	/* top: 5px; */
 	/* left: 5px; */
 	min-width: 100%;
@@ -22,8 +24,12 @@ body {
 
 #code_container {
 
+	position: absolute;
+	top: 10%;
+	left: 0; 
+	display: block;
 	min-width: 100%;
-	max-width: 100%;
+	/* max-width: 100%; */
 	width: 100%;
 	height: 100%;
 	
@@ -31,6 +37,16 @@ body {
 	/* width: 700px !important; */
 	/* min-width: 700px !important; */
 	/* height: 400px !important; */
+	
+}
+
+#editor-header {
+
+	position: absolute;
+	top: 0;
+	left: 0; 
+	height: 50px !important;
+	display: block;
 	
 }
 
@@ -156,6 +172,26 @@ body {
 
 	font-weight: bold;
 	
+}
+
+#dropdown-header {
+
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 99999999;
+	color: red;
+	margin-right: 15px;
+
+}
+
+.info-container {
+
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	z-index: 99999999;
+
 }
 
 /* .hidden_elem { */
