--- a/fg/partials/script-list.html
+++ b/fg/partials/script-list.html
@@ -12,7 +12,7 @@
 	  </label>
 	  
 	  <div class="code-bucket hidden-script">
-		<hljs-search class="hidden-script" code="script.code" language="'javascript'" linenumber="bg.option_mgr.editor.showGutter"></hljs-search>
+		<hljs-search class="hidden-script" code="script.code" language="'javascript'" linenumber="opts.showGutter"></hljs-search>
 		<table class="btn-panel hidden-script">
 		  <tr align="center">
 			<td class="left">
