--- a/fg/page_action/pa.css
+++ b/fg/page_action/pa.css
@@ -55,6 +55,25 @@ html, body {
 /*   white-space: pre; */
 /* } */
 
+/* ul { */
+/*     list-style: none; */
+/*     /\* padding: 0px; *\/ */
+/* } */
+
+/* .site-list { */
+
+/* 	display: block !important;  */
+/* 	min-width: 200px; */
+/* 	align: left; */
+/* 	text-align: left; */
+/* } */
+
+/* li { */
+
+/* 	display: block !important; */
+	
+/* } */
+
 pre {
 
 	margin-left: 10%;
