--- a/fg/partials/script-list.html
+++ b/fg/partials/script-list.html
@@ -1,26 +1,29 @@
-<div class="site-list" ng-if="list.length">
+<div id="{{list_uuid}}" class="site-list" ng-if="list.length">
   
-  <label id="{{list_uuid}}" class="click" ng-click="clickParent($event)">
+  <label class="click" ng-click="parent.elemFor(list_uuid).toggle()">
 	<bdi class="path-name">{{parent.url}}</bdi>
   </label>
   
-  <ul class="script-list">
-	<li class="script-bucket hidden-elem" ng-repeat="script in list">
+  <ul class="script-list" ng-show="parent.elemFor(list_uuid).shown">
+	<li class="script-bucket" ng-repeat="script in list">
 	  
 	  <label id="{{script.uuid}}">
-		<bdi id="{{script.name}}" class="code-uuid hidden-elem"> {{script.name}} </bdi>
-		<bdi id="{{script.uuid}}_dd" ng-click="clickScript($event)">{{script.state}}</bdi>
+		<script-name script="script"></script-name>
+		<bdi id="{{script.uuid}}_dd" ng-click="script.elemFor(list_uuid).toggle()">{{script.elemFor(list_uuid).state}}</bdi>
 	  </label>
 	  
-	  <div class="code-bucket hidden-script" ng-show="script.shown">
-		<hljs-search class="hidden-script" code="script.code" language="'javascript'" linenumber="opts.showGutter"></hljs-search>
-		<table class="btn-panel hidden-script">
+	  <div class="code-bucket" ng-show="script.elemFor(list_uuid).shown">
+		<hljs-search code="script.code" language="'javascript'" linenumber="opts.showGutter"></hljs-search>
+		<table class="btn-panel">
 		  <tr align="center">
-			<td class="left">
-			  <button id="edit-btn_{{script.uuid}}" class="browser-style mright edit-script hidden-script" data-domain="{{script.parent.parent.name}}" ng-click="editScript($event)"> Edit </button>
+			<td>
+			  <button id="edit-btn_{{script.uuid}}" class="browser-style mright edit-script" data-domain="{{script.parent.parent.name}}" ng-click="editor(script)"> Edit </button>
 			</td>
-			<td class="right">
-			  <button id="remove-btn_{{script.uuid}}" class="browser-style mright remove-script hidden-script" data-domain="{{script.parent.parent.name}}" ng-click="removeScript($event)"> Remove </button>
+			<td>
+			  <button id="remove-btn_{{script.uuid}}" class="browser-style mright remove-script" data-domain="{{script.parent.parent.name}}" ng-click="script.remove()"> Remove </button>
+			</td>
+			<td>
+			  <button id="disable-btn_{{script.uuid}}" class="browser-style mright remove-script" data-domain="{{script.parent.parent.name}}" ng-click="script.toggleDisable()"> {{script.elemFor(list_uuid).getEnabled()}} </button>
 			</td>
 		  </tr>
 		</table>
