--- a/fg/partials/script-list.html
+++ b/fg/partials/script-list.html
@@ -1,7 +1,7 @@
 <div class="list-container" id="{{list_uuid}}" ng-if="list.length">
   
   <label ng-click="parent.elemFor(list_uuid).toggle()">
-	<bdi class="black">{{parent.url}}</bdi>
+	<bdi class="black">{{parent.url || parent.name}}</bdi>
   </label>
   
   <ul ng-show="parent.elemFor(list_uuid).shown">
@@ -19,13 +19,13 @@
 		<table class="btn-panel">
 		  <tr align="center">
 			<td>
-			  <button id="edit-btn_{{script.uuid}}" class="browser-style mright edit-script" data-domain="{{script.parent.parent.name}}" ng-click="editor(script)"> Edit </button>
+			  <button id="edit-btn_{{script.uuid}}" class="browser-style mright edit-script" ng-click="editor(script)"> Edit </button>
 			</td>
 			<td>
-			  <button id="remove-btn_{{script.uuid}}" class="browser-style mright remove-script" data-domain="{{script.parent.parent.name}}" ng-click="removeScript(script)"> Remove </button>
+			  <button id="remove-btn_{{script.uuid}}" class="browser-style mright remove-script" ng-click="removeScript(script)"> Remove </button>
 			</td>
 			<td>
-			  <button id="disable-btn_{{script.uuid}}" class="browser-style mright remove-script" data-domain="{{script.parent.parent.name}}" ng-click="script.toggleDisable()"> {{script.elemFor(list_uuid).getEnabled()}} </button>
+			  <button id="disable-btn_{{script.uuid}}" class="browser-style mright remove-script" ng-click="script.toggleDisable()"> {{script.elemFor(list_uuid).getEnabled()}} </button>
 			</td>
 		  </tr>
 		</table>
