--- a/fg/partials/option-menu.html
+++ b/fg/partials/option-menu.html
@@ -1,8 +1,8 @@
 <div>
   <!-- <br></br> -->
-  <!-- <div id="{{key}}_head"> -->
-  <!-- 	<div class="sub_settings"> {{title}}</div> -->
-  <!-- </div> -->
+  <div id="{{key}}_head">
+  	<h4> {{title}}</h4>
+  </div>
 
   <div ng-repeat="opt in list">
 	<label class="input">
