--- a/fg/partials/site-index.html
+++ b/fg/partials/site-index.html
@@ -1,4 +1,4 @@
-<div id="site_list" class="list-container" ng-if="list.length">
+<div class="list-container" ng-if="list.length">
 
   <h4> Group sites  <bdi style="color:red" ng-click="toggleList()">{{ state }}</bdi> </h4>
   <!-- <bdi ng-click="toggleList()">{{ state }}</bdi> -->
