--- a/fg/partials/group-list.html
+++ b/fg/partials/group-list.html
@@ -10,6 +10,8 @@
 			   opts="opts">
 
   </script-list>
+
+  <button ng-show="parent.isShown()" ng-click="addScript()"> + </button>
   
   <site-index ng-if="sites.length"
 			  ng-show="parent.isShown()"
