--- a/fg/partials/site-index.html
+++ b/fg/partials/site-index.html
@@ -8,7 +8,7 @@
 	  <label>
 		
 		{{ sname }}
-		<button class="site-remove-btn" ng-click="removeSite(sname)"> Remove </button>
+		<button class="site-remove-btn browser-style" ng-click="removeSite(sname)"> Remove </button>
 		
 	  </label>
 	</li>
