--- a/fg/listener/listener.css
+++ b/fg/listener/listener.css
@@ -28,25 +28,72 @@ body {
 	color: #a3a3c2;
 	font-size: 250%;
 	text-align: center;
-	margin-top: 140px;
+	/* margin-top: 140px; */
 	padding-top: 10%;
 	padding-bottom: 10%;
+	
+	/* MuFina: https://stackoverflow.com/questions/2743989/how-to-vertically-center-divs */
+	position: relative;
+	top: 50%;
+    transform: translateY(-50%);
 }
 
 .jslbtn {
 
-	float: right !important;
+	align: bottom;
+}
 
+.header {
+
+	position: absolute;
+	width: 100%;
+	height: 20%;
+	max-height: 20% !important;
+}
+
+.buttons-landing {
+
+	height: 30px;
+	list-style-type: none;
+}
+
+.button-bucket {
+	
+	position: fixed;
+	display: block;
+	width: 100%;
+	height: 10%;
+	bottom: 0px;
+	max-height: 10% !important;
+	text-align: center;
+	z-index: 9999;	
+}
+
+.header-title {
+	
+	align: center;
+	width: 30%;
+	display: inline-block !important;
+
+	margin-top: 10px;
+}
+
+.header-title-text {
+
+	height: 30px !important;
+	align-self: center;
 }
 
 .filter-list {
 
 	float: right !important;
-	/* display: inline; */
+	display: inline-block;
+	
 	width: 35%;
 	margin: 0;
 	padding: 0;
 	
+	margin-right: 120px; /* !! */
 }
 
 .filter-label {
@@ -69,8 +116,11 @@ body {
 	width: 80%;
 
 }
+
 .filter-bucket {
-	
+
+	position: relative;
+	height: 100%;
 	width: 70%;
 	float: right !important;
 	display: inline-block !important;
@@ -78,7 +128,10 @@ body {
 
 .scrollable {
 
+	position: absolute;
 	overflow-y: scroll !important;
-	height: 360px;
+	top: 20%;
+	height: 80%;
+	width: 100%;
 
 }
