--- a/fg/partials/ace-frame.html
+++ b/fg/partials/ace-frame.html
@@ -1,4 +1,4 @@
-<iframe src="{{src}}" width="90%" height="{{height}}%" frameBorder="0" scrolling="no" style="margin-left: 5%; margin-bottom: 30px;">
+<iframe src="{{src}}" width="{{width}}%" height="{{height}}%" frameBorder="0" scrolling="no" style="margin-left: 5%; margin-bottom: 30px;">
 
   <h4> Unsupported iframes </h4>
 			
