--- a/fg/listener/listener.css
+++ b/fg/listener/listener.css
@@ -40,11 +40,22 @@ body {
 
 .jslbtn {
 
+	z-index: 999;
+}
+
+.jslbtn-bottom {
+
+	z-index: 999;
 	align: bottom;
 }
 
-.header {
+.jslbtn-fl {
 
+	z-index: 666;
+}
+
+.header {
+	
 	position: absolute;
 	width: 100%;
 	height: 20%;
@@ -52,7 +63,7 @@ body {
 }
 
 .buttons-landing {
-
+	
 	height: 30px;
 	list-style-type: none;
 }
@@ -64,9 +75,8 @@ body {
 	width: 100%;
 	height: 10%;
 	bottom: 0px;
-	max-height: 10% !important;
-	text-align: center;
-	z-index: 100;	
+	max-height: 30px !important;
+	text-align: center;	
 }
 
 .header-title {
@@ -74,8 +84,9 @@ body {
 	align: center;
 	width: 30%;
 	display: inline-block !important;
-
+	
 	margin-top: 10px;
+	text-align: center;
 }
 
 .header-title-text {
@@ -85,11 +96,11 @@ body {
 }
 
 .filter-list {
-
+	
 	float: right !important;
 	display: inline-block;
 	
-	width: 50%;
+	width: 65%;
 	margin: 0;
 	padding: 0;
 	
@@ -106,7 +117,7 @@ body {
 }
 
 .advanced {
-
+	
 	float: right;
 	width: 45%;
 }
