--- a/fg/partials/rule-adder.html
+++ b/fg/partials/rule-adder.html
@@ -3,8 +3,8 @@
   <select class="browser-style" ng-model="policy" ng-options="policy for policy in policies"></select>
   <label ng-show="policy == 'redirect'">
 	<span> to: </span>
-	<input id="input-{{req.request.requestId}}" class="browser-style" type="text" ng-model="redirectUrl" ng-change="urlChange()">
+	<input id="input-{{req.request.requestId}}" class="browser-style" type="text" ng-model="redirectUrl" ng-change="urlChange()"></input>
   </label>
-  <button class="browser-style jslbtn" ng-click="persist()"> Add </button>
+  <button class="browser-style jslbtn" ng-click="persist()" ng-disabled="policy == 'redirect' ? !validated : false"> Add </button>
   <button class="browser-style jslbtn" ng-click="dismiss()"> x </button>
 </div>
