--- a/fg/listener/listener.css
+++ b/fg/listener/listener.css
@@ -54,12 +54,20 @@ body {
 	z-index: 666;
 }
 
+.jslbtn-pause {
+	
+	margin-left: 20px !important;
+	
+}
+
 .header {
 	
 	position: absolute;
 	width: 100%;
 	height: 20%;
-	max-height: 20% !important;
+	
+	/* max-height: 80px !important; */
+	/* min-height: 80px !important; */
 }
 
 .buttons-landing {
@@ -159,4 +167,10 @@ body {
 	float: right;
 	display: inline-block;
 	
+}
+
+.config-sel-bucket {
+	
+	display: inline-block;
+
 }
