--- a/fg/partials/group-list.html
+++ b/fg/partials/group-list.html
@@ -1,21 +1,25 @@
 <div class="panel-section">
   
-  <script-list ng-if="scripts.length"
-			   list="scripts"
-			   parent="parent"
-			   port="port"
-			   editor="editor"
-			   shown="shown"
-			   pa="pa"
-			   opts="opts">
+	<script-list
 
-  </script-list>
-  
-  <site-index ng-if="sites.length"
-			  ng-show="parent.isShown()"
-			  list="sites"
-			  parent="parent"
-			  mgr="mgr">
-  </site-index>
+		ng-if="scripts.length"
+		list="scripts"
+		parent="parent"
+		port="port"
+		editor="editor"
+		shown="shown"
+		opts="opts">
+		
+	</script-list>
+	
+	<site-index
+
+		ng-if="sites.length"
+		ng-show="parent.isShown()"
+		list="sites"
+		parent="parent"
+		mgr="mgr">
+		
+	</site-index>
   
 </div>
