--- a/fg/opt_page/options.css
+++ b/fg/opt_page/options.css
@@ -414,6 +414,25 @@ table {
 	text-align: center;
 }
 
+label bdi {
+	
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+	
+    text-decoration: none;
+    color: initial;
+	
+	background-color: #fbfbfb;
+	border: 1px solid #b1b1b1;
+	box-shadow: 0 0 0 0 transparent;
+	font: caption;
+	height: 24px;
+	outline: 0 !important;
+	padding: 4px 8px 4px;
+	transition-duration: 250ms;
+	transition-property: box-shadow, border;
+}
 
 /* #tdefs { */
 	
