New options: Intermediate state.

--- a/fg/partials/drop-title.html
+++ b/fg/partials/drop-title.html
@@ -1,5 +1,3 @@
-<div class="panel-section panel-section-header" style="display: inline-block; width: 100%;"> 
-	<div class="text-section-header-mod"> {{ text }}
-		<drop-down shown="val"></drop-down>
-	</div>
+<div class="text-section-header browser-style"> {{ text }}
+	<drop-down shown="val"></drop-down>
 </div>
