Option Page: first version.

--- a/fg/partials/drop-title.html
+++ b/fg/partials/drop-title.html
@@ -1,3 +1,3 @@
-<div class="text-section-header browser-style"> {{ text }}
+<div class="text-section-header-mod browser-style"> {{ text }}
 	<drop-down shown="val"></drop-down>
 </div>
