--- a/fg/partials/drop-down.html
+++ b/fg/partials/drop-down.html
@@ -1,3 +1,3 @@
-<button ng-class="mostra ? 'ddbutton-shown' : 'ddbutton-hidden'" ng-click="toggleDD($event)" style="border: 0; background: transparent;">
+<button ng-class="mostra ? (flipped ? 'ddbutton-hidden' : 'ddbutton-shown' ) : (flipped ? 'ddbutton-shown' : 'ddbutton-hidden')" ng-click="toggleDD($event)" style="border: 0; background: transparent;">
 	<img style="vertical-align: sub;" src="../icons/right-arrow-64.png" width="{{width || '20'}}" height="{{height || '20'}}" alt="submit" />
 </button>
